objects/simplesurvey__Survey_Configuration__c.object
<CustomObject>
    <description>Referenced by the Survey Builder to save configuration details related to surveys previously created.</description>
    <fields>
        <fullName>simplesurvey__Brand_Color__c</fullName>
        <description>Brand Color used for the DX Landing Pages and Email Templates</description>
        <label>Brand Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Email_Template_Logo__c</fullName>
        <description>Custom image to apply to email templates.</description>
        <label>Customize Email Template Logo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Email_Template__c</fullName>
        <description>Custom styling to apply to email templates.</description>
        <label>Customize Email Template Background</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Landing_Page_Logo__c</fullName>
        <description>Custom image to apply to the landing page.</description>
        <label>Customize Landing Page Logo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Landing_Page__c</fullName>
        <description>Custom styling on the landing page.</description>
        <label>Customize Landing Page Background</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Ratings_Stars_1_Of_5__c</fullName>
        <description>Choose the default image set in Simple Survey Setup or provide an image URL.</description>
        <label>Customize Ratings Stars 1 Of 5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Ratings_Stars_2_Of_5__c</fullName>
        <description>Choose the default image set in Simple Survey Setup or provide an image URL.</description>
        <label>Customize Ratings Stars 2 Of 5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Ratings_Stars_3_Of_5__c</fullName>
        <description>Choose the default image set in Simple Survey Setup or provide an image URL.</description>
        <label>Customize Ratings Stars 3 Of 5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Selected_Rating_Star__c</fullName>
        <label>Customize Selected Rating Star</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>SVG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Thumbs_Down__c</fullName>
        <description>Choose whether to customize the thumbs down image using an image, image URL, or the default thumbs down image specified in Simple Survey Setup.</description>
        <label>Customize Thumbs Down</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Thumbs_Up__c</fullName>
        <description>Choose whether to customize the thumbs up image using an image, image URL, or the default thumbs down image specified in Simple Survey Setup.</description>
        <label>Customize Thumbs Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Customize_Unselected_Rating_Star__c</fullName>
        <label>Customize Unselected Rating Star</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>SVG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Duplicate_Check__c</fullName>
        <label>Duplicate Check (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Email_Template_Color__c</fullName>
        <description>Custom color to use as the background for email templates.</description>
        <label>Email Template Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Email_Template_Document__c</fullName>
        <description>The Id of the selected public document to use as the background image on the email template.</description>
        <label>Email Template Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Email_Template_Image__c</fullName>
        <description>Custom background image to use in email templates.</description>
        <label>Email Template Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Email_Template_Logo_Document__c</fullName>
        <description>The Id of the selected public document to use as the logo on the email template</description>
        <label>Email Template Logo Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Email_Template_Logo_Image__c</fullName>
        <description>Custom logo to use in email templates.</description>
        <label>Email Template Logo Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Enable_Skip_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, skip logic is enabled for this survey configuration.</description>
        <label>Enable Skip Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Field_Set__c</fullName>
        <description>Metadata fullName of the Field Set created for fields to use as questions in a survey created by the Survey Builder.</description>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Background_Layout__c</fullName>
        <label>Landing Page Background Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Tile Horizontally</fullName>
                </value>
                <value>
                    <fullName>Tile Vertically</fullName>
                </value>
                <value>
                    <fullName>Fill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Color__c</fullName>
        <description>Custom color for the landing page.</description>
        <label>Landing Page Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Document__c</fullName>
        <description>The Id of the selected public document to use as the background image on the landing page.</description>
        <label>Landing Page Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Image__c</fullName>
        <description>The image to use as a background on the landing page.</description>
        <label>Landing Page Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Logo_Document__c</fullName>
        <description>The Id of the selected public document to use as the logo on the landing page.</description>
        <label>Landing Page Logo Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Landing_Page_Logo_Image__c</fullName>
        <description>Custom logo to use on the landing page.</description>
        <label>Landing Page Logo Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Created_Template_Id__c</fullName>
        <description>Id of the most recently created email template for the survey being edited in the Survey Builder.</description>
        <label>Last Created Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Email_Template_Closing__c</fullName>
        <description>Recent text entered for the email template closing in the Survey Builder.</description>
        <label>Last Email Template Closing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Email_Template_Greeting__c</fullName>
        <description>Recent text entered for the email template greeting in the Survey Builder.</description>
        <label>Last Email Template Greeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Last_Step_Completed__c</fullName>
        <description>Last step completed in the Survey Builder.</description>
        <label>Last Step Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Choose Survey</fullName>
                </value>
                <value>
                    <fullName>Configure Survey Object</fullName>
                </value>
                <value>
                    <fullName>Add Questions</fullName>
                </value>
                <value>
                    <fullName>Customize Branding &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Create Email Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Layout__c</fullName>
        <description>Metadata fullName of the layout associated with a survey created using the Survey Builder.</description>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Multiselect_Picklist_Display__c</fullName>
        <description>Represents how multi-select picklists should be displayed on the survey landing page when accessed via a link on the email template generated by the Survey Builder.</description>
        <label>Multiselect Picklist Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Vertical Checkboxes</fullName>
                </value>
                <value>
                    <fullName>Horizontal Checkboxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__New_Template_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will be checked when the survey is first created or whenever the survey object field mappings are changed. Will be unchecked when the Last Created Template Id changes.</description>
        <label>New Template Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Owner_Assignment_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Assignment Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Owner_Assignment__c</fullName>
        <label>Owner Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>owner</fullName>
                </value>
                <value>
                    <fullName>manager</fullName>
                </value>
                <value>
                    <fullName>id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Picklist_Display__c</fullName>
        <description>Represents how picklists should be displayed on the survey landing page when accessed via a link on the email template generated by the Survey Builder.</description>
        <label>Picklist Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Vertical Radio Buttons</fullName>
                </value>
                <value>
                    <fullName>Horizontal Radio Buttons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Radio_Button_Above_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, places the label for a radio button under the radio button. This currently only applies if the radio&apos;s are displayed horizontally.</description>
        <label>Radio Button Above Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Rating_Scale__c</fullName>
        <description>Determines the rating system to use in a survey email template generated by the Survey Builder.</description>
        <label>Rating Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>0-1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Ratings_Stars_1_Of_5_Image__c</fullName>
        <description>URL for an image with a 1 star rating.</description>
        <label>Ratings Stars 1 Of 5 Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Ratings_Stars_2_Of_5_Image__c</fullName>
        <description>URL for an image with a 2 star rating.</description>
        <label>Ratings Stars 2 Of 5 Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Ratings_Stars_3_Of_5_Image__c</fullName>
        <description>URL for an image with a 3 star rating.</description>
        <label>Ratings Stars 3 Of 5 Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Record_Type__c</fullName>
        <description>Record Type to use for survey responses from the email template generated by the Survey Builder.</description>
        <label>Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Selected_Rating_Star_Document__c</fullName>
        <label>Selected Rating Star Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Selected_Rating_Star_Image__c</fullName>
        <label>Selected Rating Star Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Show_Clear_Responses_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, show the &quot;Clear Responses&quot; button on the survey landing page.</description>
        <label>Show Clear Responses Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Skip_Logic_Configuration__c</fullName>
        <description>JSON string representing this skip logic configuration/criteria for this survey type.</description>
        <label>Skip Logic Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Subject__c</fullName>
        <description>The subject of the Email Template.</description>
        <label>Last Email Template Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Complete_Redirect_Time__c</fullName>
        <description>The number of seconds that pass before a survey redirects a user to the specified URL when the Survey Complete Redirect Type is set to &quot;Timed&quot;.</description>
        <inlineHelpText>The number of seconds that pass before a survey redirects a user to the specified URL when the Survey Complete Redirect Type is set to &quot;Timed&quot;.</inlineHelpText>
        <label>Survey Complete Redirect Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Complete_Redirect_Type__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <description>Behavior of the survey redirect.
- None: no redirect.
- Immediate: upon submission, immediately redirect to the url specified in the configuration&apos;s Survey Complete Redirect Url.
- Timed : upon submission, show a &quot;Thank You&quot; screen with a countdown timer. After the number of seconds specified in the configuration&apos;s Survey Complete Redirect Time, redirects to the url specified in the configuration&apos;s survey Complete Redirect Url.</description>
        <inlineHelpText>Behavior of the survey redirect.</inlineHelpText>
        <label>Survey Complete Redirect Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Timed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Complete_Redirect_URL__c</fullName>
        <description>When a survey is completed, users will be redirected to this URL after a specified number seconds. The number of seconds can be set on &quot;Survey Complete Redirect URL Time&quot; field.</description>
        <inlineHelpText>When a survey is completed, users will be redirected to this URL after a specified number seconds. The number of seconds can be set on &quot;Survey Complete Redirect URL Time&quot; field.</inlineHelpText>
        <label>Survey Complete Redirect Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Object_Field_Assignment__c</fullName>
        <description>JSON string populated by the Survey Builder representing the mapping of fields from the object being surveyed to the survey object.</description>
        <label>Survey Object Field Assignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Object__c</fullName>
        <description>Object surveys are sent from in a survey created by the Survey Builder.</description>
        <label>Survey Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Theme__c</fullName>
        <description>Theme for the survey landing page. Currently only applies to Eclipse</description>
        <label>Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dark</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Thumbs_Down_Document__c</fullName>
        <description>The Id of the selected public document to use as the thumbs down image.</description>
        <label>Thumbs Down Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Thumbs_Down_Image__c</fullName>
        <description>Custom thumbs down image URL.</description>
        <label>Thumbs Down Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Thumbs_Up_Document__c</fullName>
        <description>The Id of the selected public document to use as the thumbs up image.</description>
        <label>Thumbs Up Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Thumbs_Up_Image__c</fullName>
        <description>Custom thumbs up image URL.</description>
        <label>Thumbs Up Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Type__c</fullName>
        <description>The type of survey the user views when they load the landing page.</description>
        <inlineHelpText>Use Eclipse for Lightning styled landing page.
Use Classic for the old style landing page.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Eclipse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simplesurvey__Unselected_Rating_Star_Document__c</fullName>
        <label>Unselected Rating Star Document</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Unselected_Rating_Star_Image__c</fullName>
        <label>Unselected Rating Star Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Use_Custom_Rating_Stars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Rating Stars</label>
        <type>Checkbox</type>
    </fields>
    <label>Simple Survey Configuration</label>
    <nameField>
        <label>Survey Configuration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simple Survey Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>